syntax = "proto3";

package ops;

option go_package = "github.com/DavisRayM/integration-helper/proto";

message ListSupportedDeploymentsReq {}

message ListSupportedDeploymentsResp {
    repeated string deployment = 1;
}

service Ops {
    rpc ListSupportedDeployments(ListSupportedDeploymentsReq) returns (ListSupportedDeploymentsResp) {};
}
